--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </div>
     <div class="container text-center my-5">
-        <button type="button" onclick="SIcalc()" class="btn btn-success btn-lg">Calculate</button>
+        <button type="button" onclick="SIcalc()" class="btn btn-success btn-lg" style="border-radius:2cm">Calculate</button>
     </div>
     
        
